# square-detector

./: CMakeLists.txt  README.md
include/: Shape.h  ShapeDetector.h  SquareDetector.h  Utils.h
src/: Shape.cpp  ShapeDetector.cpp  SquareDetector.cpp  Utils.cpp  main.cpp
